header, cooperation, profile

--- a/App/Views/includes/cooperation.html
+++ b/App/Views/includes/cooperation.html
@@ -1,3 +1,58 @@
 <section class="cooperation">
-    COOPERATION
+    <h3 class="heading-3">
+        Způsob spolupráce
+    </h3>
+    <container class="cooperation__container">
+        <div class="cooperation-way">
+            <div class="cooperation-way__content">
+                <h4 class="heading-4">Rezonance</h4>
+                <div class="cooperation-way__text">
+                    Když to se nou rezonuje, když to s tebou rezonuje, přišel okamžik, kdy se můžeme setkat.
+                </div>
+            </div>
+            <svg  viewBox="0 0 293 221" preserveAspectRation="none" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing">
+                <use xlink:href="#drawing-1"></use>
+            </svg>
+        </div>
+        <div class="cooperation-way">
+            <div class="cooperation-way__content">
+                <h4 class="heading-4">Dynamika skupny</h4>
+                <div class="cooperation-way__text">
+                    V dynamice skupiny vidím obrovský potenciál, velkou sílu, obohacení a inspiraci pro rozvoj každého z nás. Miluji sdílení příběhů a propojování v bytostném naladění se
+                    na život.                 
+                </div>
+            </div>
+            <svg viewBox="0 0 278 233" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing">
+                <use xlink:href="#drawing-2"></use>
+            </svg>
+        </div>
+        <div class="cooperation-way">
+            <div class="cooperation-way__content">
+                <h4 class="heading-4">Instituce a organizace</h4>
+                <div class="cooperation-way__text">
+                    Přicházím do institucí, organizací
+                    a rodin. Vstupuji tam jako host.
+                    V průběhu setkávání se stávám jejich součástí. Loučíme se ve vzájemné proměně.
+                </div>
+            </div>
+            <svg viewBox="0 0 219 203" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing">
+                <use xlink:href="#drawing-3"></use>
+            </svg>
+        </div>
+        <div class="cooperation-way">
+            <div class="cooperation-way__content">
+                <h4 class="heading-4">Individuální konzultace</h4>
+                <div class="cooperation-way__text">
+                    Kapacita pro individuální konzultace je naplněna, nové klienty v současné době nepřijímám.
+                </div>
+            </div>
+            <svg viewBox="0 0 219 203" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing">
+                <use xlink:href="#drawing-4"></use>
+            </svg>
+        </div>
+        <div class="cooperation__bottom-gradient">
+
+        </div>
+    </container>
+   
 </section>
