--- a/App/Views/includes/svg.html
+++ b/App/Views/includes/svg.html
@@ -2,20 +2,20 @@
     <defs>
         <!-- bloom -->
         <g id="bloom">
-            <path opacity="0.95" d="M43.7506 15.957C51.4254 18.0135 61.1149 22.7198 55.5371 27.5553C49.9593 32.3908 49.6723 39.9473 36.9897 34.9355C24.3071 29.9237 25.7132 27.6871 27.7439 20.1082C29.7747 12.5292 36.0757 13.9005 43.7506 15.957Z" fill="#D8CBDC"/>
-            <g opacity="0.95" filter="url(#filter_bloom_0)">
+            <path opacity="1" d="M43.7506 15.957C51.4254 18.0135 61.1149 22.7198 55.5371 27.5553C49.9593 32.3908 49.6723 39.9473 36.9897 34.9355C24.3071 29.9237 25.7132 27.6871 27.7439 20.1082C29.7747 12.5292 36.0757 13.9005 43.7506 15.957Z" fill="#D8CBDC"/>
+            <g opacity="1" filter="url(#filter_bloom_0)">
                 <path d="M28.7312 12.9323C33.0422 8.62134 39.8869 3.98825 40.9602 9.54984C42.0335 15.1114 46.9446 18.2012 38.7486 24.706C30.5526 31.2108 29.6058 29.4184 25.3487 25.1613C21.0916 20.9042 24.4202 17.2433 28.7312 12.9323Z" fill="#D1C3D5"/>
             </g>
-            <g opacity="0.95" filter="url(#filter_bloom_1)">
+            <g opacity="1" filter="url(#filter_bloom_1)">
                 <path d="M9.98873 23.5711C6.88155 16.4965 4.55987 6.28168 11.6214 7.57336C18.683 8.86504 24.5916 4.48721 28.5018 17.1591C32.4119 29.8309 29.8597 30.1242 22.8736 33.1925C15.8874 36.2609 13.0959 30.6456 9.98873 23.5711Z" fill="#D8CBDC"/>
             </g>
-            <g opacity="0.95" filter="url(#filter_bloom_2)">
+            <g opacity="1" filter="url(#filter_bloom_2)">
                 <path d="M33.2568 26.7054C36.3228 29.7714 39.6178 34.6394 35.6624 35.4028C31.707 36.1661 29.5095 39.6589 24.8833 33.8299C20.257 28.0008 21.5318 27.3275 24.5594 24.2998C27.5871 21.2721 30.1908 23.6394 33.2568 26.7054Z" fill="#E1D4A4"/>
             </g>
-            <g opacity="0.95" filter="url(#filter_bloom_3)">
+            <g opacity="1" filter="url(#filter_bloom_3)">
                 <path d="M43.3504 33.8218C48.9688 39.4402 55.007 48.3608 47.7587 49.7596C40.5105 51.1583 36.4836 57.5589 28.0061 46.8773C19.5286 36.1956 21.8645 34.9617 27.4127 29.4135C32.9609 23.8654 37.732 28.2034 43.3504 33.8218Z" fill="#D8CBDC"/>
             </g>
-            <g opacity="0.95" filter="url(#filter_bloom_4)">
+            <g opacity="1" filter="url(#filter_bloom_4)">
                 <path d="M26.8184 39.8683C25.0203 46.5789 20.9053 55.0509 16.6773 50.1739C12.4493 45.297 5.84223 45.0459 10.2244 33.9568C14.6065 22.8677 16.5621 24.0971 23.1888 25.8727C29.8155 27.6484 28.6165 33.1577 26.8184 39.8683Z" fill="#D0C3D4"/>
             </g>
         </g>
@@ -443,5 +443,93 @@
             <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
             <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
         </filter>
+        <!-- DRAWINGS -->
+        <!-- Drawing-1 -->
+        <g id="drawing-1">
+            <path d="M47.8016 145.841C60.858 126.257 88.8015 92.1774 119.858 76.1775C150.914 60.1777 196.414 133.007 210.858 121.092C225.302 109.177 244.302 68.8411 263.302 50.6777C282.301 32.5144 258.302 66.4852 258.302 66.4852C258.302 66.4852 233.245 113.255 216.302 127.678C199.358 142.1 147.745 77.177 129.302 82.1776C110.858 87.1782 89.3013 103.678 62.3015 140.178C35.3017 176.678 34.7451 165.426 47.8016 145.841Z" fill="#AE5959"/>
+            <g filter="url(#filter_drawing1_0_d)">
+                <path d="M29.8016 145.841C42.858 126.257 70.8015 92.1774 101.858 76.1775C132.914 60.1777 178.414 133.007 192.858 121.092C207.302 109.177 226.302 68.8411 245.302 50.6777C264.301 32.5144 240.302 66.4852 240.302 66.4852C240.302 66.4852 215.245 113.255 198.302 127.678C181.358 142.1 129.745 77.177 111.302 82.1776C92.858 87.1782 71.3013 103.678 44.3015 140.178C17.3017 176.678 16.7451 165.426 29.8016 145.841Z" fill="#384974"/>
+            </g>
+        </g>
+        <filter id="filter_drawing1_0_d" x="0" y="0.000732422" width="278.557" height="220.568" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+            <feOffset dy="2"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+        </filter>
+        <!-- Drawing-2 -->
+        <g id="drawing-2">
+            <g filter="url(#filter0_drawing2-a_d)">
+                <path d="M109.388 96.3692C115.388 96.3695 116.024 114.622 132.388 106.191C148.752 97.7606 152.885 77.3113 147.5 74.6903C142.114 72.0692 135.738 70.2296 121.5 74.6902C113.167 77.3007 103 78.191 97.8884 84.1036C92.7769 90.0161 93.3885 91.3692 94.8885 96.3692C96.3885 101.369 96.3881 128.604 109.388 132.103C153 130.103 284.5 70.0791 272 79.1031C259.5 88.1272 111.888 151.603 100.5 132.103C99.0624 131.738 82.3884 96.3694 91.4998 84.1036C100.611 71.8378 143.277 65.6028 150.888 66.1031C158.5 66.6034 157.391 75.1901 155.888 80.6902C154.385 86.1902 152.388 100.691 142.888 106.191C133.388 111.691 113.888 116.69 109.388 108.69C104.889 100.69 103.388 96.3689 109.388 96.3692Z" fill="#AE5959"/>
+            </g>
+            <g filter="url(#filter1_drawing2-b_d)">
+                <path d="M29.8016 126.779C42.858 107.194 70.8015 73.115 101.858 57.1151C132.914 41.1153 155.056 29.3531 165.5 42.4385C175.944 55.5239 187 98.9385 198 129.438C209 159.938 194.5 146.746 194.5 146.746C194.5 146.746 168.556 63.6151 158.556 48.4385C148.556 33.2618 129 53.603 108.5 60.9385C88 68.2739 71.3013 84.6157 44.3015 121.116C17.3017 157.616 16.7451 146.364 29.8016 126.779Z" fill="#384974"/>
+            </g>
+        </g>
+        <filter id="filter0_drawing2-a_d" x="72.3306" y="0.00634766" width="204.687" height="174.17" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+            <feOffset dy="2"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+        </filter>
+        <filter id="filter1_drawing2-b_d" x="0" y="23.1029" width="225.78" height="209.577" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+            <feOffset dy="2"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+        </filter>
+        <!-- Drawing-3 -->
+        <g id="drawing-3">
+            <g filter="url(#filter0_drawing3-a_d)">
+                <path d="M114.801 44.5427C113.351 68.0359 106.311 111.541 87.4959 140.977C68.6813 170.413 55.4454 191.707 39.8413 185.64C24.2372 179.572 47.5262 192.811 22.6924 171.966C-2.14141 151.12 17.0234 155.243 17.0234 155.243C17.0234 155.243 26.56 168.865 42.8309 176.964C59.1019 185.062 65.792 157.65 79.832 141.008C93.872 124.367 100.101 101.848 105.109 56.7239C110.117 11.6001 116.251 21.0496 114.801 44.5427Z" fill="#384974"/>
+            </g>
+            <g filter="url(#filter1_drawing3-b_d)">
+                <path d="M122.815 10.8009C135.272 19.6484 138.259 57.0252 137.921 64.6453C137.584 72.2655 138.397 78.5455 132.866 77.1602L129.451 69.7918C131.957 64.3513 131.692 70.7439 131.692 51.9653C131.692 33.1867 122.172 18.2438 120.692 15.9653C119.213 13.6867 113.192 11.4951 110.192 12.4653C107.192 13.4356 102.692 24.9653 102.692 32.9653C100.692 61.4653 169.385 199.093 158.692 189.797C148 180.5 93.5727 47.2407 97.9314 28.353C102.29 9.46537 110.357 1.95328 122.815 10.8009Z" fill="#AE5959"/>
+            </g>
+        </g>
+        <filter id="filter0_drawing3-a_d" x="0" y="10.5289" width="147.117" height="192.17" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+            <feOffset dy="2"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+        </filter>
+        <filter id="filter1_drawing3-b_d" x="59.0032" y="0.000732422" width="159.516" height="196.768" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+            <feOffset dy="2"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+        </filter>
+        <!-- Drawing-4 -->
+        <g id="drawing-4">
+            <g filter="url(#filter0_drawing4_d)">
+                <path d="M104.497 119.759C85.1195 124.804 91.6102 124.102 75.9975 115.821C60.3849 107.541 55.5284 107.49 59.7077 93.5199C63.8869 79.55 69.2903 78.8214 86.7523 59.5517C104.214 40.2821 100.758 53.3893 100.758 53.3893C100.758 53.3893 71.3794 78.8203 65.4976 93.5199C59.6157 108.22 70.4976 105.249 75.9974 109.186C81.4972 113.122 84.4975 121.971 104.497 113.321C124.497 104.672 123.875 114.714 104.497 119.759Z" fill="#384974"/>
+            </g>
+            <path d="M93.1754 38.3375C48.6755 27.8369 10.1753 73.3374 33.6752 99.3381C57.1751 125.339 97.5896 163.345 112.033 151.43C126.477 139.515 124.675 94.5008 143.675 76.3374C162.675 58.174 140.175 90.3378 140.175 90.3378C140.175 90.3378 134.421 143.593 117.477 158.015C100.533 172.438 40.4771 115.515 26.1755 105.338C11.874 95.1608 13.1748 70.4789 41.6751 41.3381C70.1755 12.1973 137.675 48.8381 93.1754 38.3375Z" fill="#AE5959"/>
+        </g>
+        <filter id="filter0_drawing4_d" x="49.1753" y="39.3376" width="94.4161" height="99.1972" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+            <feOffset dy="2"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+        </filter>
+      
     </defs>
 </svg>
