--- a/src/client/scss/base/_typography.scss
+++ b/src/client/scss/base/_typography.scss
@@ -1,8 +1,24 @@
 .heading-1 {
     font-family: $font-cursive;
+    font-weight: normal;
+    font-size: 7rem;
+    color: white;
+    text-align: center;
+}
+.heading-2 {
+    font-family: $font-cursive;
+    font-weight: normal;
+    font-size: 4rem;
+    color: white;
+    text-align: center;
 }
 .heading-3 {
     font-size: 3.5rem;
     font-weight: 400;
     letter-spacing: 2px;
+    font-family: $font-kalam;
+}
+.heading-4 {
+    font-size: 2.5rem;
+    font-weight: normal;
 }
