--- a/src/client/scss/main.scss
+++ b/src/client/scss/main.scss
@@ -6,8 +6,12 @@
 @import 'base/typography';
 @import 'base/utilities';
 
+@import 'components/cooperation-way';
+
 @import 'sections/cooperation';
 @import 'sections/events';
 @import 'sections/footer';
 @import 'sections/header';
 @import 'sections/passedEvents';
+@import 'sections/profile';
+
