--- a/src/client/scss/sections/_cooperation.scss
+++ b/src/client/scss/sections/_cooperation.scss
@@ -1,3 +1,50 @@
 .cooperation {
     width: 100%;
+    padding-top: 15rem;
+    padding-left: 10rem;
+    padding-right: 10rem;
+    padding-bottom: 15rem;
+
+    position: relative;
+
+    @media screen and (max-width: 1500px) {
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
+
+    & .heading-3 {
+        margin-left: 11rem;
+        margin-bottom: 10rem;
+
+        position: relative;
+
+        &::before {
+            content: "";
+            width: 5rem;
+            height: 5rem;
+            background-image: url(../img/bloom.svg);
+            background-position: 50% 50%;
+
+            display: block;
+
+            position: absolute;
+            left: -8rem;
+        }
+    }
+    &__container {
+        display: flex;
+        justify-content: space-around;
+
+        @media screen and (max-width: 1300px) {
+            flex-wrap: wrap;
+        }
+    }
+    &__bottom-gradient {
+        height: 10rem;
+        width: 100%;
+        background-image: linear-gradient(180deg, rgba(159, 191, 115, 0) 0%, rgba(159, 191, 115, 0.1) 100%);
+
+        position: absolute;
+        bottom: 0;
+    }
 }
