--- a/App/Views/includes/topics.html
+++ b/App/Views/includes/topics.html
@@ -1,3 +1,26 @@
 <section class="topics">
-    TOPICS
+    <div class="topics__svg">
+        <svg class="topics__svg__1" width="375" height="593" viewBox="0 0 375 593" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <use xlink:href="#decorationShape"></use> 
+        </svg>
+    </div>
+    <img src="img/leafs.jpg" alt="rose" class="topics__img">
+    <div class="topics__text">
+        <div class="topics__text__head">
+            <svg class="topics__text__head__svg" width="59" height="65" viewBox="0 0 59 65" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <use xlink:href="#bloom"></use> 
+            </svg>
+            <h1 class="topics__text__head__text">Témata konzultací</h1>
+        </div>
+        <div class="topics__text__consultation paragraph-1">Konzultace se nejčastěji týkají mezilidských vztahů, komunikace, osobnostního rozvoje, zvyšování kvality života, hledaní zdrojů při zvládání stresu, zlepšování zdravotní a psychické kondice, řešení konfliktních situací a zvladaní emocí. Dále se objevují témata, jak přistupovat k dětem a doprovázet je při emočních konfrontacích, partnerská problematika, posílení vlastních kompetencí při komunikaci v týmu, s nadřízeným, při prezentaci ve firmach.</div>
+        <div class="topics__text__reflect paragraph-1">- Osobní rozvoj</div>
+        <div class="topics__text__reflect paragraph-1">- Tělesné a duševní zdraví</div>
+        <div class="topics__text__reflect paragraph-1">- Komunikace</div>
+        <div class="topics__text__reflect paragraph-1">- Mezilidské vztahy</div>        
+    </div>
+    <div class="topics__svg">
+        <svg class="topics__svg__2" width="375" height="593" viewBox="0 0 375 593" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <use xlink:href="#decorationShape"></use> 
+        </svg>
+    </div>
 </section>
