--- a/src/client/scss/main.scss
+++ b/src/client/scss/main.scss
@@ -11,4 +11,5 @@
 @import 'sections/footer';
 @import 'sections/header';
 @import 'sections/passedEvents';
+@import 'sections/topics';
 @import 'sections/way';
