--- a/App/Views/index.html
+++ b/App/Views/index.html
@@ -21,25 +21,24 @@
     {{ include('includes/passedEvents.html') }}
     
     <!-- COOPERATION -->
-    {{ include('includes/cooperation.html') }}
+    <!-- {{ include('includes/cooperation.html') }} -->
     
     <!-- PROFILE -->
-    {{ include('includes/profile.html') }}
+    <!-- {{ include('includes/profile.html') }} -->
     
     <!-- ORGANIZATIONS -->
-    {{ include('includes/organizations.html') }}
+    <!-- {{ include('includes/organizations.html') }} -->
     
     <!-- TOPICS -->
-    {{ include('includes/topics.html') }}
+    <!-- {{ include('includes/topics.html') }} -->
     
     <!-- WAY -->
-    {{ include('includes/way.html') }}
+    <!-- {{ include('includes/way.html') }} -->
     
     <!-- REVIEWS -->
-    {{ include('includes/reviews.html') }}
+    <!-- {{ include('includes/reviews.html') }} -->
     
     <!-- FOOTER -->
-    {{ include('includes/footer.html') }}
 
 </body>
 </html>
