--- a/App/Views/includes/svg.html
+++ b/App/Views/includes/svg.html
@@ -442,6 +442,13 @@
             <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
             <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
             <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
-        </filter>      
+        </filter>
+        
+        
+        <!-- TESTING -->
+        
+        <pattern id="img1" patternUnits="userSpaceOnUse" width="100" height="100">
+            <image xlink:href="img/group.jpg" x="0" y="0" width="100%" height="100%" preserveAspectRatio="xMinYMin slice" />
+        </pattern>
     </defs>
 </svg>
