--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,7 +148,8 @@ a:link {
 
 .events {
   width: 100vw;
-  height: 80rem;
+  height: 100rem;
+  padding-top: 12rem;
   background-image: url("../img/eventsBackground.svg");
   background-size: cover;
   overflow: hidden;
@@ -157,52 +158,105 @@ a:link {
   justify-content: space-between;
   position: relative;
   z-index: 2; }
+  @media only screen and (max-width: 1000px) {
+    .events {
+      justify-content: center;
+      align-content: center;
+      flex-wrap: wrap; } }
   .events__btn-block {
     width: 51rem;
     height: 38rem;
     filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
     position: relative; }
+    @media only screen and (max-width: 1000px) {
+      .events__btn-block {
+        display: none; } }
     .events__btn-block--prev {
       transform: translateX(-20%); }
-      .events__btn-block--prev .events__btn-block__btn-wrapper {
-        transform: translate(50%, -50%) scale(-1);
-        right: 20rem; }
-        .events__btn-block--prev .events__btn-block__btn-wrapper:hover {
-          transform: translate(50%, -50%) scale(-0.95); }
     .events__btn-block--next {
       transform: translateX(20%); }
-      .events__btn-block--next .events__btn-block__btn-wrapper {
-        transform: translate(-50%, -50%);
-        left: 20rem; }
-        .events__btn-block--next .events__btn-block__btn-wrapper:hover {
-          transform: translate(-50%, -50%) scale(0.95); }
     .events__btn-block svg {
       width: 100%;
       height: 100%;
       fill: #F0F5E9; }
-    .events__btn-block__btn-wrapper {
-      width: 7rem;
-      height: 15rem;
-      filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.1));
-      cursor: pointer;
-      position: absolute;
-      top: 50%;
-      transition: all .1s; }
-      .events__btn-block__btn-wrapper:hover {
-        filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.1)); }
-    .events__btn-block__btn {
-      width: 100%;
-      height: 100%;
-      background-color: #9CBD6F;
-      clip-path: polygon(0 0, 100% 50%, 0 100%); }
+      @media only screen and (max-width: 1600px) {
+        .events__btn-block svg {
+          display: none; } }
+  .events__mobile-btns {
+    width: 100%;
+    height: auto;
+    margin-top: 5rem;
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    @media only screen and (min-width: 1001px) {
+      .events__mobile-btns {
+        display: none; } }
+  .events__btn-wrapper {
+    width: 7rem;
+    height: 15rem;
+    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.1));
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    transition: all .1s; }
+    .events__btn-wrapper:hover {
+      filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.1)); }
+    .events__btn-wrapper.eventsBtnPrev {
+      transform: translate(50%, -50%) scale(-1);
+      right: 42%; }
+      .events__btn-wrapper.eventsBtnPrev:hover {
+        transform: translate(50%, -50%) scale(-0.95); }
+        @media only screen and (max-width: 1000px) {
+          .events__btn-wrapper.eventsBtnPrev:hover {
+            transform: scale(-0.95); } }
+      @media only screen and (max-width: 1600px) {
+        .events__btn-wrapper.eventsBtnPrev {
+          right: 25%; } }
+      @media only screen and (max-width: 1000px) {
+        .events__btn-wrapper.eventsBtnPrev {
+          margin-right: 5rem;
+          transform: scale(-1); } }
+    .events__btn-wrapper.eventsBtnNext {
+      transform: translate(-50%, -50%);
+      left: 42%; }
+      .events__btn-wrapper.eventsBtnNext:hover {
+        transform: translate(-50%, -50%) scale(0.95); }
+        @media only screen and (max-width: 1000px) {
+          .events__btn-wrapper.eventsBtnNext:hover {
+            transform: scale(0.95); } }
+      @media only screen and (max-width: 1600px) {
+        .events__btn-wrapper.eventsBtnNext {
+          left: 25%; } }
+      @media only screen and (max-width: 1000px) {
+        .events__btn-wrapper.eventsBtnNext {
+          transform: none; } }
+    @media only screen and (max-width: 1800px) {
+      .events__btn-wrapper {
+        width: 6rem;
+        height: 12rem; } }
+    @media only screen and (max-width: 1000px) {
+      .events__btn-wrapper {
+        position: static; } }
+  .events__btn {
+    width: 100%;
+    height: 100%;
+    background-color: #9CBD6F;
+    clip-path: polygon(0 0, 100% 50%, 0 100%); }
   .events__event {
     width: 35rem;
     height: 25rem;
     filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
-    position: relative; }
+    transform: translateY(-25%);
+    position: relative;
+    flex-shrink: 0; }
+    @media only screen and (max-width: 1600px) {
+      .events__event {
+        width: 32rem; } }
     .events__event svg {
       width: 100%;
-      height: 100%;
+      height: 150%;
       fill: #ffffff; }
     .events__event__image {
       width: 75%;
@@ -217,7 +271,7 @@ a:link {
       left: 5rem; }
     .events__event .paragraph-small {
       position: absolute;
-      top: 19rem;
+      top: 26rem;
       left: 5rem; }
 
 .footer {
@@ -307,24 +361,47 @@ a:link {
   height: 80rem;
   position: relative;
   z-index: 3; }
+  @media only screen and (max-width: 900px) {
+    .passedEvents {
+      height: auto; } }
   .passedEvents__backgroundImage {
     width: 65%;
     height: 100%;
     transform: scaleX(-1);
     object-fit: cover; }
+    @media only screen and (max-width: 900px) {
+      .passedEvents__backgroundImage {
+        display: none; } }
   .passedEvents__content {
     height: 105%;
     width: auto;
     transform: translateY(-50%);
     position: absolute;
     top: 50%;
-    right: 0; }
+    right: -2rem; }
+    @media only screen and (max-width: 1100px) {
+      .passedEvents__content {
+        height: 100%;
+        right: -3rem; } }
+    @media only screen and (max-width: 900px) {
+      .passedEvents__content {
+        width: 100%;
+        height: auto;
+        background-color: #9CBD6F;
+        transform: none;
+        position: static; } }
     .passedEvents__content__background {
       height: 100%; }
+      @media only screen and (max-width: 900px) {
+        .passedEvents__content__background {
+          display: none; } }
     .passedEvents__content__flowerBase {
       position: absolute;
       bottom: -4px;
       left: -6rem; }
+      @media only screen and (max-width: 1100px) {
+        .passedEvents__content__flowerBase {
+          display: none; } }
     .passedEvents__content__text-content {
       width: 69rem;
       height: 100%;
@@ -332,6 +409,16 @@ a:link {
       position: absolute;
       right: 0;
       top: 0; }
+      @media only screen and (max-width: 900px) {
+        .passedEvents__content__text-content {
+          width: 100%;
+          padding: 12rem 6rem;
+          position: static; } }
+      @media only screen and (max-width: 380px) {
+        .passedEvents__content__text-content {
+          width: 100%;
+          padding: 12rem 4rem;
+          position: static; } }
       .passedEvents__content__text-content .heading-3 {
         margin-bottom: 12rem;
         color: #ffffff;
@@ -347,6 +434,13 @@ a:link {
           position: absolute;
           right: 0;
           bottom: 0; }
+        @media only screen and (max-width: 900px) {
+          .passedEvents__content__text-content .heading-3 {
+            margin-bottom: 6rem;
+            text-align: left; }
+            .passedEvents__content__text-content .heading-3::after {
+              right: unset;
+              left: 0; } }
     .passedEvents__content__list {
       list-style-type: none; }
     .passedEvents__content__item {
@@ -377,6 +471,14 @@ a:link {
       border-radius: 3rem;
       box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.1);
       text-align: center; }
+      @media only screen and (max-width: 650px) {
+        .passedEvents__form input {
+          width: 40rem;
+          height: 5rem; } }
+      @media only screen and (max-width: 500px) {
+        .passedEvents__form input {
+          width: 28rem;
+          height: 5rem; } }
 
 .profile {
   padding-bottom: 20rem;
