--- a/src/client/scss/sections/_events.scss
+++ b/src/client/scss/sections/_events.scss
@@ -1,6 +1,7 @@
 .events {
     width: 100vw;
-    height: 80rem;
+    height: 100rem;
+    padding-top: 12rem;
     background-image: url('../img/eventsBackground.svg');
     background-size: cover;
     overflow: hidden;
@@ -12,6 +13,12 @@
     position: relative;
     z-index: 2;
 
+    @media only screen and (max-width: 1000px) {
+        justify-content: center;
+        align-content: center;
+        flex-wrap: wrap;
+    }
+
     &__btn-block {
         width: 51rem;
         height: 38rem;
@@ -19,70 +26,130 @@
 
         position: relative;
 
+        @media only screen and (max-width: 1000px) {
+            display: none;
+        }
+
         &--prev {
-            transform: translateX(-20%);
-
-            & .events__btn-block__btn-wrapper {
-                transform: translate(50%, -50%) scale(-1);
-
-                right: 20rem;
-
-                &:hover {                    
-                    transform: translate(50%, -50%) scale(-.95);
-                }
-            }
+            transform: translateX(-20%);   
         }
         &--next {
             transform: translateX(20%);
-
-            & .events__btn-block__btn-wrapper {
-                transform: translate(-50%, -50%);                
-
-                left: 20rem;
-
-                &:hover {                    
-                    transform: translate(-50%, -50%) scale(.95);
-                }
-            }
         }
 
         & svg {
             width: 100%;
             height: 100%;
             fill: $color-green-light;
-        }
-        &__btn-wrapper {
-            width: 7rem;
-            height: 15rem;
-            filter: drop-shadow(0 2px 4px $color-black-overlay-light-2);
-            cursor: pointer;
 
-            position: absolute;
-            top: 50%;
-
-            transition: all .1s;
-
-            &:hover {
-                filter: drop-shadow(0 1px 1px $color-black-overlay-light-2);
+            @media only screen and (max-width: 1600px) {
+                display: none;
             }
         }
-        &__btn {
-            width: 100%;
-            height: 100%;
-            background-color: $color-green;
-            clip-path: polygon(0 0, 100% 50%, 0 100%);
+    }
+    &__mobile-btns {
+        width: 100%;
+        height: auto;
+        margin-top: 5rem;
+
+        flex-shrink: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        @media only screen and (min-width: 1001px) {
+            display: none;
         }
     }
+    &__btn-wrapper {
+        width: 7rem;
+        height: 15rem;
+        filter: drop-shadow(0 2px 4px $color-black-overlay-light-2);
+        cursor: pointer;
+
+        position: absolute;
+        top: 50%;
+
+        transition: all .1s;
+
+        &:hover {
+            filter: drop-shadow(0 1px 1px $color-black-overlay-light-2);
+        }
+
+        &.eventsBtnPrev {
+            transform: translate(50%, -50%) scale(-1);
+
+            right: 42%;
+
+            &:hover {                    
+                transform: translate(50%, -50%) scale(-.95);
+
+                @media only screen and (max-width: 1000px) {
+                    transform: scale(-.95);
+                }
+            }
+
+            @media only screen and (max-width: 1600px) {
+                right: 25%;
+            }
+            @media only screen and (max-width: 1000px) {
+                margin-right: 5rem;
+                transform: scale(-1);
+            }
+        }
+        &.eventsBtnNext {
+            transform: translate(-50%, -50%);                
+
+            left: 42%;
+
+            &:hover {                    
+                transform: translate(-50%, -50%) scale(.95);
+
+                @media only screen and (max-width: 1000px) {
+                    transform: scale(.95);
+                }
+            }
+
+            @media only screen and (max-width: 1600px) {
+                left: 25%;
+            }
+            @media only screen and (max-width: 1000px) {
+                transform: none;
+            }
+        }
+
+        @media only screen and (max-width: 1800px) {
+            width: 6rem;
+            height: 12rem;
+        }
+        @media only screen and (max-width: 1000px) {
+            position: static;
+        }
+    }
+    &__btn {
+        width: 100%;
+        height: 100%;
+        background-color: $color-green;
+        clip-path: polygon(0 0, 100% 50%, 0 100%);
+    }
+
     &__event {
         width: 35rem;
         height: 25rem;
         filter: drop-shadow(0 2px 4px $color-black-overlay-light);
+        transform: translateY(-25%);
 
         position: relative;
 
+        flex-shrink: 0;
+
+        @media only screen and (max-width: 1600px) {
+            width: 32rem;
+        }
+
         & svg {
             width: 100%;
-            height: 100%;
+            height: 150%;
             fill: $color-white;
         }
 
@@ -102,7 +169,7 @@
         }
         & .paragraph-small {
             position: absolute;
-            top: 19rem;
+            top: 26rem;
             left: 5rem;
         }
     }
