Making it pushable

--- a/App/Views/includes/events.html
+++ b/App/Views/includes/events.html
@@ -31,7 +31,7 @@
         <h4 class="heading-4">Lesní zámek v3.0</h4>
         <p class="paragraph-small">21. - 25.10.2021</p>
     </div>
-    <div class="events__event">
+    <!-- <div class="events__event">
         <svg width="414" height="308" viewBox="0 0 414 308" xmlns="http://www.w3.org/2000/svg">
             <use xlink:href="#eventBlock" />
         </svg>
@@ -54,7 +54,7 @@
         <img class="events__event__image" src="img/group.jpg" alt="group">
         <h4 class="heading-4">Lesní zámek v6.0</h4>
         <p class="paragraph-small">21. - 25.10.2021</p>
-    </div>
+    </div> -->
     <div class="events__btn-block events__btn-block--next">
         <svg width="414" height="308" viewBox="0 0 414 308" xmlns="http://www.w3.org/2000/svg">
             <use xlink:href="#eventBlock" />
