--- a/App/Views/admin/events.html
+++ b/App/Views/admin/events.html
@@ -31,8 +31,8 @@
 
                         <tr class="item-list__row" id="<%= product._id %>">
                             <td>{{ event.event_title }}</td>
-                            <td>{{ event.event_date }}</td>
-                            <td>{{ event.event_imageUrl }}</td>
+                            <td>{{ event.event_prettyDate }}</td>
+                            <td><a href="/img/{{ event.event_imageUrl }}">Odkaz</a></td>
                             <td>{{ event.event_link }}</td>
                             <td>
                                 <a class="item-list__row__btn" href="/admin/events/{{ event.event_id }}">Upravit</a>
