--- a/src/admin/scss/layout/_basic.scss
+++ b/src/admin/scss/layout/_basic.scss
@@ -42,7 +42,7 @@
         }
     }
     
-    &--events {        
-        padding: 12rem;
+    &--events, &--event-detail {        
+        padding: 12rem;;
     }
 }
