--- a/public/css/admin-style.css
+++ b/public/css/admin-style.css
@@ -120,6 +120,7 @@ a:link {
     .event-form__column > .product-form__data-cell {
       width: 100%; }
   .event-form__data-cell {
+    width: 25%;
     display: flex;
     flex-direction: column; }
     .event-form__data-cell > * {
@@ -299,7 +300,7 @@ a:link {
     .main--error .heading-3 {
       margin-top: 25vh;
       margin-bottom: 2rem; }
-  .main--events {
+  .main--events, .main--event-detail {
     padding: 12rem; }
 
 .footer {
